--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>The elm-mdl library</title>
+    <title>elm-dice</title>
 
     <!-- MDL 
 
@@ -34,7 +34,7 @@
   </head>
   <body>
     <!-- elm -->
-    <script src="../elm.js"></script>
+    <script src="elm.js"></script>
     <script>
       app = Elm.Main.fullscreen();
     </script>
